// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`measureParentId 1`] = `
{
  "annotation": {},
  "chartType": "column",
  "config": {
    "column": {
      "backgroundColor": "transparent",
      "color": {
        "colorScheme": [
          "#8D72F6",
          "#5766EC",
          "#66A3FE",
          "#51D5E6",
          "#4EC0B3",
          "#F9DF90",
          "#F9AD71",
          "#ED8888",
          "#E9A0C3",
          "#D77DD3",
        ],
        "linearColorScheme": [
          "#C2CEFF",
          "#5766EC",
        ],
      },
      "crosshairRect": {
        "labelBackgroundColor": "#364159",
        "labelColor": "#ffffff",
        "labelVisible": true,
        "rectColor": "#3641594d",
        "visible": true,
      },
      "label": {
        "enable": true,
      },
      "legend": {
        "border": true,
        "enable": true,
        "labelFontColor": "#646A73",
        "labelFontSize": 12,
        "labelFontWeight": 400,
        "maxSize": 1,
        "position": "rt",
        "shapeType": "rectRound",
      },
      "stackCornerRadius": [
        4,
        4,
        0,
        0,
      ],
      "tooltip": {
        "enable": true,
      },
      "xAxis": {
        "grid": {
          "gridColor": "#36415926",
          "gridWidth": 0.5,
          "visible": false,
        },
        "label": {
          "labelAngle": 0,
          "labelColor": "#797B85",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "visible": true,
        },
        "labelAutoHide": true,
        "labelAutoHideGap": 4,
        "labelAutoLimit": true,
        "labelAutoLimitLength": 80,
        "labelAutoRotate": false,
        "labelAutoRotateAngleRange": [
          0,
          -45,
          -90,
        ],
        "line": {
          "lineColor": "#3641594d",
          "lineWidth": 1,
          "visible": true,
        },
        "tick": {
          "tickColor": "#3641594d",
          "tickInside": false,
          "tickSize": 4,
          "visible": false,
        },
        "title": {
          "titleColor": "#646A73",
          "titleFontSize": 12,
          "titleFontWeight": 400,
          "titleText": "",
          "visible": false,
        },
      },
      "yAxis": {
        "grid": {
          "gridColor": "#36415926",
          "gridWidth": 0.5,
          "visible": true,
        },
        "inverse": false,
        "label": {
          "labelAngle": 0,
          "labelColor": "#797B85",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "visible": true,
        },
        "line": {
          "lineColor": "#3641594d",
          "lineWidth": 1,
          "visible": false,
        },
        "nice": true,
        "tick": {
          "tickColor": "#3641594d",
          "tickInside": false,
          "tickSize": 4,
          "visible": false,
        },
        "title": {
          "titleColor": "#646A73",
          "titleFontSize": 12,
          "titleFontWeight": 400,
          "titleText": "",
          "visible": false,
        },
        "zero": true,
      },
    },
  },
  "customTheme": {
    "config": {
      "column": {
        "backgroundColor": "transparent",
        "color": {
          "colorScheme": [
            "#8D72F6",
            "#5766EC",
            "#66A3FE",
            "#51D5E6",
            "#4EC0B3",
            "#F9DF90",
            "#F9AD71",
            "#ED8888",
            "#E9A0C3",
            "#D77DD3",
          ],
          "linearColorScheme": [
            "#C2CEFF",
            "#5766EC",
          ],
        },
        "crosshairRect": {
          "labelBackgroundColor": "#364159",
          "labelColor": "#ffffff",
          "labelVisible": true,
          "rectColor": "#3641594d",
          "visible": true,
        },
        "label": {
          "enable": true,
        },
        "legend": {
          "border": true,
          "enable": true,
          "labelFontColor": "#646A73",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "maxSize": 1,
          "position": "rt",
          "shapeType": "rectRound",
        },
        "stackCornerRadius": [
          4,
          4,
          0,
          0,
        ],
        "tooltip": {
          "enable": true,
        },
        "xAxis": {
          "grid": {
            "gridColor": "#36415926",
            "gridWidth": 0.5,
            "visible": false,
          },
          "label": {
            "labelAngle": 0,
            "labelColor": "#797B85",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "labelAutoHide": true,
          "labelAutoHideGap": 4,
          "labelAutoLimit": true,
          "labelAutoLimitLength": 80,
          "labelAutoRotate": false,
          "labelAutoRotateAngleRange": [
            0,
            -45,
            -90,
          ],
          "line": {
            "lineColor": "#3641594d",
            "lineWidth": 1,
            "visible": true,
          },
          "tick": {
            "tickColor": "#3641594d",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#646A73",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
        },
        "yAxis": {
          "grid": {
            "gridColor": "#36415926",
            "gridWidth": 0.5,
            "visible": true,
          },
          "inverse": false,
          "label": {
            "labelAngle": 0,
            "labelColor": "#797B85",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "line": {
            "lineColor": "#3641594d",
            "lineWidth": 1,
            "visible": false,
          },
          "nice": true,
          "tick": {
            "tickColor": "#3641594d",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#646A73",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
          "zero": true,
        },
      },
    },
  },
  "dataset": [
    [
      {
        "__Dim_ColorId__": "2019-Sales-sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "Jan",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart1": 200000,
        "__OriginalData__": {
          "month": "Jan",
          "profit": 210000,
          "sales": 200000,
          "year": "2019",
        },
        "month": "Jan",
        "sales": 200000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Profit-profit",
        "__Dim_Color__": "2019-Profit",
        "__Dim_Detail__": "2019-Profit",
        "__Dim_X__": "Jan",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart1": 210000,
        "__OriginalData__": {
          "month": "Jan",
          "profit": 210000,
          "sales": 200000,
          "year": "2019",
        },
        "month": "Jan",
        "profit": 210000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales-sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "Feb",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart1": 400000,
        "__OriginalData__": {
          "month": "Feb",
          "profit": 220000,
          "sales": 400000,
          "year": "2019",
        },
        "month": "Feb",
        "sales": 400000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Profit-profit",
        "__Dim_Color__": "2019-Profit",
        "__Dim_Detail__": "2019-Profit",
        "__Dim_X__": "Feb",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart1": 220000,
        "__OriginalData__": {
          "month": "Feb",
          "profit": 220000,
          "sales": 400000,
          "year": "2019",
        },
        "month": "Feb",
        "profit": 220000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales-sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "Mar",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart1": 600000,
        "__OriginalData__": {
          "month": "Mar",
          "profit": 230000,
          "sales": 600000,
          "year": "2019",
        },
        "month": "Mar",
        "sales": 600000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Profit-profit",
        "__Dim_Color__": "2019-Profit",
        "__Dim_Detail__": "2019-Profit",
        "__Dim_X__": "Mar",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart1": 230000,
        "__OriginalData__": {
          "month": "Mar",
          "profit": 230000,
          "sales": 600000,
          "year": "2019",
        },
        "month": "Mar",
        "profit": 230000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales-sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "Apr",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart1": 800000,
        "__OriginalData__": {
          "month": "Apr",
          "profit": 340000,
          "sales": 800000,
          "year": "2019",
        },
        "month": "Apr",
        "sales": 800000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Profit-profit",
        "__Dim_Color__": "2019-Profit",
        "__Dim_Detail__": "2019-Profit",
        "__Dim_X__": "Apr",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart1": 340000,
        "__OriginalData__": {
          "month": "Apr",
          "profit": 340000,
          "sales": 800000,
          "year": "2019",
        },
        "month": "Apr",
        "profit": 340000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales-sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "May",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart1": 1000000,
        "__OriginalData__": {
          "month": "May",
          "profit": 450000,
          "sales": 1000000,
          "year": "2019",
        },
        "month": "May",
        "sales": 1000000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Profit-profit",
        "__Dim_Color__": "2019-Profit",
        "__Dim_Detail__": "2019-Profit",
        "__Dim_X__": "May",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart1": 450000,
        "__OriginalData__": {
          "month": "May",
          "profit": 450000,
          "sales": 1000000,
          "year": "2019",
        },
        "month": "May",
        "profit": 450000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales-sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "Jun",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart1": 1200000,
        "__OriginalData__": {
          "month": "Jun",
          "profit": 560000,
          "sales": 1200000,
          "year": "2019",
        },
        "month": "Jun",
        "sales": 1200000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Profit-profit",
        "__Dim_Color__": "2019-Profit",
        "__Dim_Detail__": "2019-Profit",
        "__Dim_X__": "Jun",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart1": 560000,
        "__OriginalData__": {
          "month": "Jun",
          "profit": 560000,
          "sales": 1200000,
          "year": "2019",
        },
        "month": "Jun",
        "profit": 560000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2020-Sales-sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "Jan",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart1": 200000,
        "__OriginalData__": {
          "month": "Jan",
          "profit": 110000,
          "sales": 200000,
          "year": "2020",
        },
        "month": "Jan",
        "sales": 200000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Profit-profit",
        "__Dim_Color__": "2020-Profit",
        "__Dim_Detail__": "2020-Profit",
        "__Dim_X__": "Jan",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart1": 110000,
        "__OriginalData__": {
          "month": "Jan",
          "profit": 110000,
          "sales": 200000,
          "year": "2020",
        },
        "month": "Jan",
        "profit": 110000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales-sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "Feb",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart1": 400000,
        "__OriginalData__": {
          "month": "Feb",
          "profit": 320000,
          "sales": 400000,
          "year": "2020",
        },
        "month": "Feb",
        "sales": 400000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Profit-profit",
        "__Dim_Color__": "2020-Profit",
        "__Dim_Detail__": "2020-Profit",
        "__Dim_X__": "Feb",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart1": 320000,
        "__OriginalData__": {
          "month": "Feb",
          "profit": 320000,
          "sales": 400000,
          "year": "2020",
        },
        "month": "Feb",
        "profit": 320000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales-sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "Mar",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart1": 600000,
        "__OriginalData__": {
          "month": "Mar",
          "profit": 430000,
          "sales": 600000,
          "year": "2020",
        },
        "month": "Mar",
        "sales": 600000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Profit-profit",
        "__Dim_Color__": "2020-Profit",
        "__Dim_Detail__": "2020-Profit",
        "__Dim_X__": "Mar",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart1": 430000,
        "__OriginalData__": {
          "month": "Mar",
          "profit": 430000,
          "sales": 600000,
          "year": "2020",
        },
        "month": "Mar",
        "profit": 430000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales-sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "Apr",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart1": 800000,
        "__OriginalData__": {
          "month": "Apr",
          "profit": 540000,
          "sales": 800000,
          "year": "2020",
        },
        "month": "Apr",
        "sales": 800000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Profit-profit",
        "__Dim_Color__": "2020-Profit",
        "__Dim_Detail__": "2020-Profit",
        "__Dim_X__": "Apr",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart1": 540000,
        "__OriginalData__": {
          "month": "Apr",
          "profit": 540000,
          "sales": 800000,
          "year": "2020",
        },
        "month": "Apr",
        "profit": 540000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales-sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "May",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart1": 1000000,
        "__OriginalData__": {
          "month": "May",
          "profit": 250000,
          "sales": 1000000,
          "year": "2020",
        },
        "month": "May",
        "sales": 1000000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Profit-profit",
        "__Dim_Color__": "2020-Profit",
        "__Dim_Detail__": "2020-Profit",
        "__Dim_X__": "May",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart1": 250000,
        "__OriginalData__": {
          "month": "May",
          "profit": 250000,
          "sales": 1000000,
          "year": "2020",
        },
        "month": "May",
        "profit": 250000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales-sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "Jun",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart1": 1200000,
        "__OriginalData__": {
          "month": "Jun",
          "profit": 610000,
          "sales": 1200000,
          "year": "2020",
        },
        "month": "Jun",
        "sales": 1200000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Profit-profit",
        "__Dim_Color__": "2020-Profit",
        "__Dim_Detail__": "2020-Profit",
        "__Dim_X__": "Jun",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart1": 610000,
        "__OriginalData__": {
          "month": "Jun",
          "profit": 610000,
          "sales": 1200000,
          "year": "2020",
        },
        "month": "Jun",
        "profit": 610000,
        "year": "2020",
      },
    ],
    [
      {
        "__Dim_ColorId__": "2019-Sales-sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "Jan",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart2": 200000,
        "__OriginalData__": {
          "month": "Jan",
          "profit": 210000,
          "sales": 200000,
          "year": "2019",
        },
        "month": "Jan",
        "sales": 200000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Profit-profit",
        "__Dim_Color__": "2019-Profit",
        "__Dim_Detail__": "2019-Profit",
        "__Dim_X__": "Jan",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart2": 210000,
        "__OriginalData__": {
          "month": "Jan",
          "profit": 210000,
          "sales": 200000,
          "year": "2019",
        },
        "month": "Jan",
        "profit": 210000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales-sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "Feb",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart2": 400000,
        "__OriginalData__": {
          "month": "Feb",
          "profit": 220000,
          "sales": 400000,
          "year": "2019",
        },
        "month": "Feb",
        "sales": 400000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Profit-profit",
        "__Dim_Color__": "2019-Profit",
        "__Dim_Detail__": "2019-Profit",
        "__Dim_X__": "Feb",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart2": 220000,
        "__OriginalData__": {
          "month": "Feb",
          "profit": 220000,
          "sales": 400000,
          "year": "2019",
        },
        "month": "Feb",
        "profit": 220000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales-sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "Mar",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart2": 600000,
        "__OriginalData__": {
          "month": "Mar",
          "profit": 230000,
          "sales": 600000,
          "year": "2019",
        },
        "month": "Mar",
        "sales": 600000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Profit-profit",
        "__Dim_Color__": "2019-Profit",
        "__Dim_Detail__": "2019-Profit",
        "__Dim_X__": "Mar",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart2": 230000,
        "__OriginalData__": {
          "month": "Mar",
          "profit": 230000,
          "sales": 600000,
          "year": "2019",
        },
        "month": "Mar",
        "profit": 230000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales-sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "Apr",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart2": 800000,
        "__OriginalData__": {
          "month": "Apr",
          "profit": 340000,
          "sales": 800000,
          "year": "2019",
        },
        "month": "Apr",
        "sales": 800000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Profit-profit",
        "__Dim_Color__": "2019-Profit",
        "__Dim_Detail__": "2019-Profit",
        "__Dim_X__": "Apr",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart2": 340000,
        "__OriginalData__": {
          "month": "Apr",
          "profit": 340000,
          "sales": 800000,
          "year": "2019",
        },
        "month": "Apr",
        "profit": 340000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales-sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "May",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart2": 1000000,
        "__OriginalData__": {
          "month": "May",
          "profit": 450000,
          "sales": 1000000,
          "year": "2019",
        },
        "month": "May",
        "sales": 1000000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Profit-profit",
        "__Dim_Color__": "2019-Profit",
        "__Dim_Detail__": "2019-Profit",
        "__Dim_X__": "May",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart2": 450000,
        "__OriginalData__": {
          "month": "May",
          "profit": 450000,
          "sales": 1000000,
          "year": "2019",
        },
        "month": "May",
        "profit": 450000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales-sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "Jun",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart2": 1200000,
        "__OriginalData__": {
          "month": "Jun",
          "profit": 560000,
          "sales": 1200000,
          "year": "2019",
        },
        "month": "Jun",
        "sales": 1200000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Profit-profit",
        "__Dim_Color__": "2019-Profit",
        "__Dim_Detail__": "2019-Profit",
        "__Dim_X__": "Jun",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart2": 560000,
        "__OriginalData__": {
          "month": "Jun",
          "profit": 560000,
          "sales": 1200000,
          "year": "2019",
        },
        "month": "Jun",
        "profit": 560000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2020-Sales-sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "Jan",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart2": 200000,
        "__OriginalData__": {
          "month": "Jan",
          "profit": 110000,
          "sales": 200000,
          "year": "2020",
        },
        "month": "Jan",
        "sales": 200000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Profit-profit",
        "__Dim_Color__": "2020-Profit",
        "__Dim_Detail__": "2020-Profit",
        "__Dim_X__": "Jan",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart2": 110000,
        "__OriginalData__": {
          "month": "Jan",
          "profit": 110000,
          "sales": 200000,
          "year": "2020",
        },
        "month": "Jan",
        "profit": 110000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales-sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "Feb",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart2": 400000,
        "__OriginalData__": {
          "month": "Feb",
          "profit": 320000,
          "sales": 400000,
          "year": "2020",
        },
        "month": "Feb",
        "sales": 400000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Profit-profit",
        "__Dim_Color__": "2020-Profit",
        "__Dim_Detail__": "2020-Profit",
        "__Dim_X__": "Feb",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart2": 320000,
        "__OriginalData__": {
          "month": "Feb",
          "profit": 320000,
          "sales": 400000,
          "year": "2020",
        },
        "month": "Feb",
        "profit": 320000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales-sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "Mar",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart2": 600000,
        "__OriginalData__": {
          "month": "Mar",
          "profit": 430000,
          "sales": 600000,
          "year": "2020",
        },
        "month": "Mar",
        "sales": 600000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Profit-profit",
        "__Dim_Color__": "2020-Profit",
        "__Dim_Detail__": "2020-Profit",
        "__Dim_X__": "Mar",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart2": 430000,
        "__OriginalData__": {
          "month": "Mar",
          "profit": 430000,
          "sales": 600000,
          "year": "2020",
        },
        "month": "Mar",
        "profit": 430000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales-sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "Apr",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart2": 800000,
        "__OriginalData__": {
          "month": "Apr",
          "profit": 540000,
          "sales": 800000,
          "year": "2020",
        },
        "month": "Apr",
        "sales": 800000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Profit-profit",
        "__Dim_Color__": "2020-Profit",
        "__Dim_Detail__": "2020-Profit",
        "__Dim_X__": "Apr",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart2": 540000,
        "__OriginalData__": {
          "month": "Apr",
          "profit": 540000,
          "sales": 800000,
          "year": "2020",
        },
        "month": "Apr",
        "profit": 540000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales-sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "May",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart2": 1000000,
        "__OriginalData__": {
          "month": "May",
          "profit": 250000,
          "sales": 1000000,
          "year": "2020",
        },
        "month": "May",
        "sales": 1000000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Profit-profit",
        "__Dim_Color__": "2020-Profit",
        "__Dim_Detail__": "2020-Profit",
        "__Dim_X__": "May",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart2": 250000,
        "__OriginalData__": {
          "month": "May",
          "profit": 250000,
          "sales": 1000000,
          "year": "2020",
        },
        "month": "May",
        "profit": 250000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales-sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "Jun",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart2": 1200000,
        "__OriginalData__": {
          "month": "Jun",
          "profit": 610000,
          "sales": 1200000,
          "year": "2020",
        },
        "month": "Jun",
        "sales": 1200000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Profit-profit",
        "__Dim_Color__": "2020-Profit",
        "__Dim_Detail__": "2020-Profit",
        "__Dim_X__": "Jun",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart2": 610000,
        "__OriginalData__": {
          "month": "Jun",
          "profit": 610000,
          "sales": 1200000,
          "year": "2020",
        },
        "month": "Jun",
        "profit": 610000,
        "year": "2020",
      },
    ],
  ],
  "datasetReshapeInfo": [
    {
      "foldInfo": {
        "colorRange": [
          0,
          1,
        ],
        "foldMap": {
          "profit": "Profit",
          "sales": "Sales",
        },
        "measureId": "__MeaId__",
        "measureName": "__MeaName__",
        "measureRange": [
          110000,
          1200000,
        ],
        "measureValue": "__MeaValue__chart1",
      },
      "id": "chart1",
      "index": 0,
      "unfoldInfo": {
        "colorIdMap": {
          "2019-Profit-profit": "2019-Profit",
          "2019-Sales-sales": "2019-Sales",
          "2020-Profit-profit": "2020-Profit",
          "2020-Sales-sales": "2020-Sales",
        },
        "colorItems": [
          "2019-Sales-sales",
          "2019-Profit-profit",
          "2020-Sales-sales",
          "2020-Profit-profit",
        ],
        "encodingAngle": "__Dim_Angle__",
        "encodingColor": "__Dim_Color__",
        "encodingColorId": "__Dim_ColorId__",
        "encodingDetail": "__Dim_Detail__",
        "encodingX": "__Dim_X__",
        "encodingY": "__Dim_Y__",
      },
    },
    {
      "foldInfo": {
        "colorRange": [
          0,
          1,
        ],
        "foldMap": {
          "profit": "Profit",
          "sales": "Sales",
        },
        "measureId": "__MeaId__",
        "measureName": "__MeaName__",
        "measureRange": [
          110000,
          1200000,
        ],
        "measureValue": "__MeaValue__chart2",
      },
      "id": "chart2",
      "index": 1,
      "unfoldInfo": {
        "colorIdMap": {
          "2019-Profit-profit": "2019-Profit",
          "2019-Sales-sales": "2019-Sales",
          "2020-Profit-profit": "2020-Profit",
          "2020-Sales-sales": "2020-Sales",
        },
        "colorItems": [
          "2019-Sales-sales",
          "2019-Profit-profit",
          "2020-Sales-sales",
          "2020-Profit-profit",
        ],
        "encodingAngle": "__Dim_Angle__",
        "encodingColor": "__Dim_Color__",
        "encodingColorId": "__Dim_ColorId__",
        "encodingDetail": "__Dim_Detail__",
        "encodingX": "__Dim_X__",
        "encodingY": "__Dim_Y__",
      },
    },
  ],
  "dimensions": [
    {
      "alias": "Month",
      "id": "month",
      "location": "dimension",
    },
    {
      "alias": "Yearn",
      "id": "year",
      "location": "dimension",
    },
    {
      "alias": "指标名称",
      "id": "__MeaName__",
    },
  ],
  "encoding": {
    "color": [
      "year",
      "__MeaName__",
    ],
    "detail": [
      "__MeaName__",
      "year",
    ],
    "x": [
      "month",
    ],
  },
  "locale": "zh-CN",
  "markStyle": {},
  "measures": [
    {
      "children": [
        {
          "alias": "Sales",
          "id": "sales",
          "parentId": "chart1",
        },
        {
          "alias": "Profit",
          "id": "profit",
          "parentId": "chart1",
        },
      ],
      "id": "chart1",
    },
    {
      "children": [
        {
          "alias": "Sales",
          "id": "sales",
          "parentId": "chart2",
        },
        {
          "alias": "Profit",
          "id": "profit",
          "parentId": "chart2",
        },
      ],
      "id": "chart2",
    },
  ],
}
`;

exports[`measureParentId 2`] = `
{
  "animation": true,
  "columns": [],
  "heightMode": "adaptive",
  "indicators": [
    {
      "cellType": "chart",
      "chartModule": "vchart",
      "chartSpec": {
        "animation": true,
        "axes": [
          {
            "domainLine": {
              "style": {
                "lineWidth": 1,
                "stroke": "#3641594d",
              },
              "visible": true,
            },
            "grid": {
              "style": {
                "lineWidth": 0.5,
                "stroke": "#36415926",
              },
              "visible": false,
            },
            "hover": true,
            "label": {
              "autoHide": true,
              "autoHideMethod": "greedy",
              "autoHideSeparation": 4,
              "autoLimit": true,
              "autoRotate": false,
              "autoRotateAngle": [
                0,
                -45,
                -90,
              ],
              "flush": true,
              "lastVisible": true,
              "minGap": 4,
              "space": 8,
              "style": {
                "angle": 0,
                "fill": "#797B85",
                "fontSize": 12,
                "fontWeight": 400,
                "maxLineWidth": 80,
              },
              "visible": true,
            },
            "maxHeight": 140,
            "orient": "bottom",
            "paddingInner": [
              0.15,
              0.1,
            ],
            "paddingOuter": [
              0.075,
              0.1,
            ],
            "sampling": false,
            "tick": {
              "inside": false,
              "style": {
                "stroke": "#3641594d",
              },
              "tickSize": 4,
              "visible": false,
            },
            "title": {
              "style": {
                "fill": "#646A73",
                "fontSize": 12,
                "fontWeight": 400,
              },
              "text": "",
              "visible": false,
            },
            "type": "band",
            "visible": true,
          },
          {
            "base": 10,
            "domainLine": {
              "style": {
                "lineWidth": 1,
                "stroke": "#3641594d",
              },
              "visible": false,
            },
            "grid": {
              "style": {
                "lineWidth": 0.5,
                "stroke": "#36415926",
              },
              "visible": true,
            },
            "innerOffset": {
              "top": 7,
            },
            "inverse": false,
            "label": {
              "formatMethod": [Function],
              "style": {
                "angle": 0,
                "fill": "#797B85",
                "fontSize": 12,
                "fontWeight": 400,
              },
              "visible": true,
            },
            "max": undefined,
            "min": undefined,
            "nice": true,
            "orient": "left",
            "tick": {
              "inside": false,
              "style": {
                "stroke": "#3641594d",
              },
              "tickSize": 4,
              "visible": false,
            },
            "title": {
              "style": {
                "fill": "#646A73",
                "fontSize": 12,
                "fontWeight": 400,
              },
              "text": "",
              "visible": false,
            },
            "type": "linear",
            "visible": true,
            "zero": true,
          },
        ],
        "background": "transparent",
        "bar": {
          "state": {
            "hover": {
              "fillOpacity": 0.6,
            },
          },
          "style": {
            "lineWidth": 1,
          },
        },
        "color": {
          "domain": [
            "2019-Sales-sales",
            "2019-Profit-profit",
            "2020-Sales-sales",
            "2020-Profit-profit",
          ],
          "range": [
            "#8D72F6",
            "#5766EC",
            "#66A3FE",
            "#51D5E6",
            "#4EC0B3",
            "#F9DF90",
            "#F9AD71",
            "#ED8888",
            "#E9A0C3",
            "#D77DD3",
          ],
          "specified": undefined,
          "type": "ordinal",
        },
        "crosshair": {
          "xField": {
            "label": {
              "labelBackground": {
                "style": {
                  "fill": "#364159",
                },
                "visible": true,
              },
              "style": {
                "fill": "#ffffff",
              },
              "visible": true,
            },
            "line": {
              "style": {
                "fill": "#3641594d",
                "lineWidth": 0,
                "opacity": 0.2,
              },
              "type": "rect",
            },
            "visible": true,
          },
        },
        "data": {
          "fields": {
            "__Dim_Angle__": {
              "sortIndex": 0,
            },
            "__Dim_ColorId__": {
              "sortIndex": 0,
            },
            "__Dim_X__": {
              "sortIndex": 0,
            },
          },
          "id": "chart1",
          "values": undefined,
        },
        "direction": "vertical",
        "label": {
          "formatMethod": [Function],
          "visible": true,
        },
        "padding": 0,
        "region": [
          {
            "clip": true,
          },
        ],
        "seriesField": "__Dim_ColorId__",
        "stackCornerRadius": [Function],
        "stackInverse": true,
        "tooltip": {
          "dimension": {
            "content": [
              {
                "key": [Function],
                "shapeType": "rectRound",
                "value": [Function],
                "visible": true,
              },
            ],
          },
          "mark": {
            "content": [
              {
                "hasShape": true,
                "key": [Function],
                "shapeType": "rectRound",
                "value": [Function],
                "visible": true,
              },
              {
                "hasShape": true,
                "key": [Function],
                "shapeType": "rectRound",
                "value": [Function],
                "visible": true,
              },
              {
                "hasShape": true,
                "key": [Function],
                "shapeType": "rectRound",
                "value": [Function],
                "visible": true,
              },
              {
                "hasShape": true,
                "key": [Function],
                "value": [Function],
                "visible": true,
              },
            ],
            "title": {
              "visible": true,
            },
          },
          "visible": true,
        },
        "type": "bar",
        "xField": "__Dim_X__",
        "yField": "__MeaValue__chart1",
      },
      "indicatorKey": "chart1",
      "style": {
        "padding": [
          1,
          1,
          0,
          1,
        ],
      },
      "title": undefined,
    },
    {
      "cellType": "chart",
      "chartModule": "vchart",
      "chartSpec": {
        "animation": true,
        "axes": [
          {
            "domainLine": {
              "style": {
                "lineWidth": 1,
                "stroke": "#3641594d",
              },
              "visible": true,
            },
            "grid": {
              "style": {
                "lineWidth": 0.5,
                "stroke": "#36415926",
              },
              "visible": false,
            },
            "hover": true,
            "label": {
              "autoHide": true,
              "autoHideMethod": "greedy",
              "autoHideSeparation": 4,
              "autoLimit": true,
              "autoRotate": false,
              "autoRotateAngle": [
                0,
                -45,
                -90,
              ],
              "flush": true,
              "lastVisible": true,
              "minGap": 4,
              "space": 8,
              "style": {
                "angle": 0,
                "fill": "#797B85",
                "fontSize": 12,
                "fontWeight": 400,
                "maxLineWidth": 80,
              },
              "visible": true,
            },
            "maxHeight": 140,
            "orient": "bottom",
            "paddingInner": [
              0.15,
              0.1,
            ],
            "paddingOuter": [
              0.075,
              0.1,
            ],
            "sampling": false,
            "tick": {
              "inside": false,
              "style": {
                "stroke": "#3641594d",
              },
              "tickSize": 4,
              "visible": false,
            },
            "title": {
              "style": {
                "fill": "#646A73",
                "fontSize": 12,
                "fontWeight": 400,
              },
              "text": "",
              "visible": false,
            },
            "type": "band",
            "visible": true,
          },
          {
            "base": 10,
            "domainLine": {
              "style": {
                "lineWidth": 1,
                "stroke": "#3641594d",
              },
              "visible": false,
            },
            "grid": {
              "style": {
                "lineWidth": 0.5,
                "stroke": "#36415926",
              },
              "visible": true,
            },
            "innerOffset": {
              "top": 7,
            },
            "inverse": false,
            "label": {
              "formatMethod": [Function],
              "style": {
                "angle": 0,
                "fill": "#797B85",
                "fontSize": 12,
                "fontWeight": 400,
              },
              "visible": true,
            },
            "max": undefined,
            "min": undefined,
            "nice": true,
            "orient": "left",
            "tick": {
              "inside": false,
              "style": {
                "stroke": "#3641594d",
              },
              "tickSize": 4,
              "visible": false,
            },
            "title": {
              "style": {
                "fill": "#646A73",
                "fontSize": 12,
                "fontWeight": 400,
              },
              "text": "",
              "visible": false,
            },
            "type": "linear",
            "visible": true,
            "zero": true,
          },
        ],
        "background": "transparent",
        "bar": {
          "state": {
            "hover": {
              "fillOpacity": 0.6,
            },
          },
          "style": {
            "lineWidth": 1,
          },
        },
        "color": {
          "domain": [
            "2019-Sales-sales",
            "2019-Profit-profit",
            "2020-Sales-sales",
            "2020-Profit-profit",
          ],
          "range": [
            "#8D72F6",
            "#5766EC",
            "#66A3FE",
            "#51D5E6",
            "#4EC0B3",
            "#F9DF90",
            "#F9AD71",
            "#ED8888",
            "#E9A0C3",
            "#D77DD3",
          ],
          "specified": undefined,
          "type": "ordinal",
        },
        "crosshair": {
          "xField": {
            "label": {
              "labelBackground": {
                "style": {
                  "fill": "#364159",
                },
                "visible": true,
              },
              "style": {
                "fill": "#ffffff",
              },
              "visible": true,
            },
            "line": {
              "style": {
                "fill": "#3641594d",
                "lineWidth": 0,
                "opacity": 0.2,
              },
              "type": "rect",
            },
            "visible": true,
          },
        },
        "data": {
          "fields": {
            "__Dim_Angle__": {
              "sortIndex": 0,
            },
            "__Dim_ColorId__": {
              "sortIndex": 0,
            },
            "__Dim_X__": {
              "sortIndex": 0,
            },
          },
          "id": "chart2",
          "values": undefined,
        },
        "direction": "vertical",
        "label": {
          "formatMethod": [Function],
          "visible": true,
        },
        "padding": 0,
        "region": [
          {
            "clip": true,
          },
        ],
        "seriesField": "__Dim_ColorId__",
        "stackCornerRadius": [Function],
        "stackInverse": true,
        "tooltip": {
          "dimension": {
            "content": [
              {
                "key": [Function],
                "shapeType": "rectRound",
                "value": [Function],
                "visible": true,
              },
            ],
          },
          "mark": {
            "content": [
              {
                "hasShape": true,
                "key": [Function],
                "shapeType": "rectRound",
                "value": [Function],
                "visible": true,
              },
              {
                "hasShape": true,
                "key": [Function],
                "shapeType": "rectRound",
                "value": [Function],
                "visible": true,
              },
              {
                "hasShape": true,
                "key": [Function],
                "shapeType": "rectRound",
                "value": [Function],
                "visible": true,
              },
              {
                "hasShape": true,
                "key": [Function],
                "value": [Function],
                "visible": true,
              },
            ],
            "title": {
              "visible": true,
            },
          },
          "visible": true,
        },
        "type": "bar",
        "xField": "__Dim_X__",
        "yField": "__MeaValue__chart2",
      },
      "indicatorKey": "chart2",
      "style": {
        "padding": [
          1,
          1,
          0,
          1,
        ],
      },
      "title": undefined,
    },
  ],
  "indicatorsAsCol": false,
  "legends": {
    "data": [
      {
        "label": "2019-Sales-sales",
        "shape": {
          "fill": "#8D72F6",
          "outerBorder": {
            "distance": 3,
            "lineWidth": 1,
            "stroke": "#8D72F6",
          },
        },
      },
      {
        "label": "2019-Profit-profit",
        "shape": {
          "fill": "#5766EC",
          "outerBorder": {
            "distance": 3,
            "lineWidth": 1,
            "stroke": "#5766EC",
          },
        },
      },
      {
        "label": "2020-Sales-sales",
        "shape": {
          "fill": "#66A3FE",
          "outerBorder": {
            "distance": 3,
            "lineWidth": 1,
            "stroke": "#66A3FE",
          },
        },
      },
      {
        "label": "2020-Profit-profit",
        "shape": {
          "fill": "#51D5E6",
          "outerBorder": {
            "distance": 3,
            "lineWidth": 1,
            "stroke": "#51D5E6",
          },
        },
      },
    ],
    "item": {
      "background": {
        "state": {
          "selectedHover": {
            "fill": "#646A73",
            "fillOpacity": 0.05,
          },
        },
      },
      "focus": true,
      "focusIconStyle": {
        "fill": "#646A73",
        "fontWeight": 400,
        "size": 14,
      },
      "label": {
        "formatMethod": [Function],
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
      },
      "maxWidth": "30%",
      "shape": {
        "space": 6,
        "style": {
          "size": 8,
          "symbolType": "rectRound",
        },
      },
    },
    "maxCol": 1,
    "maxRow": 1,
    "orient": "right",
    "position": "start",
    "type": "discrete",
    "visible": true,
  },
  "records": {
    "chart1": [
      {
        "__Dim_ColorId__": "2019-Sales-sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "Jan",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart1": 200000,
        "__OriginalData__": {
          "month": "Jan",
          "profit": 210000,
          "sales": 200000,
          "year": "2019",
        },
        "month": "Jan",
        "sales": 200000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Profit-profit",
        "__Dim_Color__": "2019-Profit",
        "__Dim_Detail__": "2019-Profit",
        "__Dim_X__": "Jan",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart1": 210000,
        "__OriginalData__": {
          "month": "Jan",
          "profit": 210000,
          "sales": 200000,
          "year": "2019",
        },
        "month": "Jan",
        "profit": 210000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales-sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "Feb",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart1": 400000,
        "__OriginalData__": {
          "month": "Feb",
          "profit": 220000,
          "sales": 400000,
          "year": "2019",
        },
        "month": "Feb",
        "sales": 400000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Profit-profit",
        "__Dim_Color__": "2019-Profit",
        "__Dim_Detail__": "2019-Profit",
        "__Dim_X__": "Feb",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart1": 220000,
        "__OriginalData__": {
          "month": "Feb",
          "profit": 220000,
          "sales": 400000,
          "year": "2019",
        },
        "month": "Feb",
        "profit": 220000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales-sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "Mar",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart1": 600000,
        "__OriginalData__": {
          "month": "Mar",
          "profit": 230000,
          "sales": 600000,
          "year": "2019",
        },
        "month": "Mar",
        "sales": 600000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Profit-profit",
        "__Dim_Color__": "2019-Profit",
        "__Dim_Detail__": "2019-Profit",
        "__Dim_X__": "Mar",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart1": 230000,
        "__OriginalData__": {
          "month": "Mar",
          "profit": 230000,
          "sales": 600000,
          "year": "2019",
        },
        "month": "Mar",
        "profit": 230000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales-sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "Apr",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart1": 800000,
        "__OriginalData__": {
          "month": "Apr",
          "profit": 340000,
          "sales": 800000,
          "year": "2019",
        },
        "month": "Apr",
        "sales": 800000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Profit-profit",
        "__Dim_Color__": "2019-Profit",
        "__Dim_Detail__": "2019-Profit",
        "__Dim_X__": "Apr",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart1": 340000,
        "__OriginalData__": {
          "month": "Apr",
          "profit": 340000,
          "sales": 800000,
          "year": "2019",
        },
        "month": "Apr",
        "profit": 340000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales-sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "May",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart1": 1000000,
        "__OriginalData__": {
          "month": "May",
          "profit": 450000,
          "sales": 1000000,
          "year": "2019",
        },
        "month": "May",
        "sales": 1000000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Profit-profit",
        "__Dim_Color__": "2019-Profit",
        "__Dim_Detail__": "2019-Profit",
        "__Dim_X__": "May",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart1": 450000,
        "__OriginalData__": {
          "month": "May",
          "profit": 450000,
          "sales": 1000000,
          "year": "2019",
        },
        "month": "May",
        "profit": 450000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales-sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "Jun",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart1": 1200000,
        "__OriginalData__": {
          "month": "Jun",
          "profit": 560000,
          "sales": 1200000,
          "year": "2019",
        },
        "month": "Jun",
        "sales": 1200000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Profit-profit",
        "__Dim_Color__": "2019-Profit",
        "__Dim_Detail__": "2019-Profit",
        "__Dim_X__": "Jun",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart1": 560000,
        "__OriginalData__": {
          "month": "Jun",
          "profit": 560000,
          "sales": 1200000,
          "year": "2019",
        },
        "month": "Jun",
        "profit": 560000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2020-Sales-sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "Jan",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart1": 200000,
        "__OriginalData__": {
          "month": "Jan",
          "profit": 110000,
          "sales": 200000,
          "year": "2020",
        },
        "month": "Jan",
        "sales": 200000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Profit-profit",
        "__Dim_Color__": "2020-Profit",
        "__Dim_Detail__": "2020-Profit",
        "__Dim_X__": "Jan",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart1": 110000,
        "__OriginalData__": {
          "month": "Jan",
          "profit": 110000,
          "sales": 200000,
          "year": "2020",
        },
        "month": "Jan",
        "profit": 110000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales-sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "Feb",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart1": 400000,
        "__OriginalData__": {
          "month": "Feb",
          "profit": 320000,
          "sales": 400000,
          "year": "2020",
        },
        "month": "Feb",
        "sales": 400000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Profit-profit",
        "__Dim_Color__": "2020-Profit",
        "__Dim_Detail__": "2020-Profit",
        "__Dim_X__": "Feb",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart1": 320000,
        "__OriginalData__": {
          "month": "Feb",
          "profit": 320000,
          "sales": 400000,
          "year": "2020",
        },
        "month": "Feb",
        "profit": 320000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales-sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "Mar",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart1": 600000,
        "__OriginalData__": {
          "month": "Mar",
          "profit": 430000,
          "sales": 600000,
          "year": "2020",
        },
        "month": "Mar",
        "sales": 600000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Profit-profit",
        "__Dim_Color__": "2020-Profit",
        "__Dim_Detail__": "2020-Profit",
        "__Dim_X__": "Mar",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart1": 430000,
        "__OriginalData__": {
          "month": "Mar",
          "profit": 430000,
          "sales": 600000,
          "year": "2020",
        },
        "month": "Mar",
        "profit": 430000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales-sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "Apr",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart1": 800000,
        "__OriginalData__": {
          "month": "Apr",
          "profit": 540000,
          "sales": 800000,
          "year": "2020",
        },
        "month": "Apr",
        "sales": 800000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Profit-profit",
        "__Dim_Color__": "2020-Profit",
        "__Dim_Detail__": "2020-Profit",
        "__Dim_X__": "Apr",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart1": 540000,
        "__OriginalData__": {
          "month": "Apr",
          "profit": 540000,
          "sales": 800000,
          "year": "2020",
        },
        "month": "Apr",
        "profit": 540000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales-sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "May",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart1": 1000000,
        "__OriginalData__": {
          "month": "May",
          "profit": 250000,
          "sales": 1000000,
          "year": "2020",
        },
        "month": "May",
        "sales": 1000000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Profit-profit",
        "__Dim_Color__": "2020-Profit",
        "__Dim_Detail__": "2020-Profit",
        "__Dim_X__": "May",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart1": 250000,
        "__OriginalData__": {
          "month": "May",
          "profit": 250000,
          "sales": 1000000,
          "year": "2020",
        },
        "month": "May",
        "profit": 250000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales-sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "Jun",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart1": 1200000,
        "__OriginalData__": {
          "month": "Jun",
          "profit": 610000,
          "sales": 1200000,
          "year": "2020",
        },
        "month": "Jun",
        "sales": 1200000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Profit-profit",
        "__Dim_Color__": "2020-Profit",
        "__Dim_Detail__": "2020-Profit",
        "__Dim_X__": "Jun",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart1": 610000,
        "__OriginalData__": {
          "month": "Jun",
          "profit": 610000,
          "sales": 1200000,
          "year": "2020",
        },
        "month": "Jun",
        "profit": 610000,
        "year": "2020",
      },
    ],
    "chart2": [
      {
        "__Dim_ColorId__": "2019-Sales-sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "Jan",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart2": 200000,
        "__OriginalData__": {
          "month": "Jan",
          "profit": 210000,
          "sales": 200000,
          "year": "2019",
        },
        "month": "Jan",
        "sales": 200000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Profit-profit",
        "__Dim_Color__": "2019-Profit",
        "__Dim_Detail__": "2019-Profit",
        "__Dim_X__": "Jan",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart2": 210000,
        "__OriginalData__": {
          "month": "Jan",
          "profit": 210000,
          "sales": 200000,
          "year": "2019",
        },
        "month": "Jan",
        "profit": 210000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales-sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "Feb",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart2": 400000,
        "__OriginalData__": {
          "month": "Feb",
          "profit": 220000,
          "sales": 400000,
          "year": "2019",
        },
        "month": "Feb",
        "sales": 400000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Profit-profit",
        "__Dim_Color__": "2019-Profit",
        "__Dim_Detail__": "2019-Profit",
        "__Dim_X__": "Feb",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart2": 220000,
        "__OriginalData__": {
          "month": "Feb",
          "profit": 220000,
          "sales": 400000,
          "year": "2019",
        },
        "month": "Feb",
        "profit": 220000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales-sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "Mar",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart2": 600000,
        "__OriginalData__": {
          "month": "Mar",
          "profit": 230000,
          "sales": 600000,
          "year": "2019",
        },
        "month": "Mar",
        "sales": 600000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Profit-profit",
        "__Dim_Color__": "2019-Profit",
        "__Dim_Detail__": "2019-Profit",
        "__Dim_X__": "Mar",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart2": 230000,
        "__OriginalData__": {
          "month": "Mar",
          "profit": 230000,
          "sales": 600000,
          "year": "2019",
        },
        "month": "Mar",
        "profit": 230000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales-sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "Apr",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart2": 800000,
        "__OriginalData__": {
          "month": "Apr",
          "profit": 340000,
          "sales": 800000,
          "year": "2019",
        },
        "month": "Apr",
        "sales": 800000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Profit-profit",
        "__Dim_Color__": "2019-Profit",
        "__Dim_Detail__": "2019-Profit",
        "__Dim_X__": "Apr",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart2": 340000,
        "__OriginalData__": {
          "month": "Apr",
          "profit": 340000,
          "sales": 800000,
          "year": "2019",
        },
        "month": "Apr",
        "profit": 340000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales-sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "May",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart2": 1000000,
        "__OriginalData__": {
          "month": "May",
          "profit": 450000,
          "sales": 1000000,
          "year": "2019",
        },
        "month": "May",
        "sales": 1000000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Profit-profit",
        "__Dim_Color__": "2019-Profit",
        "__Dim_Detail__": "2019-Profit",
        "__Dim_X__": "May",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart2": 450000,
        "__OriginalData__": {
          "month": "May",
          "profit": 450000,
          "sales": 1000000,
          "year": "2019",
        },
        "month": "May",
        "profit": 450000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Sales-sales",
        "__Dim_Color__": "2019-Sales",
        "__Dim_Detail__": "2019-Sales",
        "__Dim_X__": "Jun",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart2": 1200000,
        "__OriginalData__": {
          "month": "Jun",
          "profit": 560000,
          "sales": 1200000,
          "year": "2019",
        },
        "month": "Jun",
        "sales": 1200000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2019-Profit-profit",
        "__Dim_Color__": "2019-Profit",
        "__Dim_Detail__": "2019-Profit",
        "__Dim_X__": "Jun",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart2": 560000,
        "__OriginalData__": {
          "month": "Jun",
          "profit": 560000,
          "sales": 1200000,
          "year": "2019",
        },
        "month": "Jun",
        "profit": 560000,
        "year": "2019",
      },
      {
        "__Dim_ColorId__": "2020-Sales-sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "Jan",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart2": 200000,
        "__OriginalData__": {
          "month": "Jan",
          "profit": 110000,
          "sales": 200000,
          "year": "2020",
        },
        "month": "Jan",
        "sales": 200000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Profit-profit",
        "__Dim_Color__": "2020-Profit",
        "__Dim_Detail__": "2020-Profit",
        "__Dim_X__": "Jan",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart2": 110000,
        "__OriginalData__": {
          "month": "Jan",
          "profit": 110000,
          "sales": 200000,
          "year": "2020",
        },
        "month": "Jan",
        "profit": 110000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales-sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "Feb",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart2": 400000,
        "__OriginalData__": {
          "month": "Feb",
          "profit": 320000,
          "sales": 400000,
          "year": "2020",
        },
        "month": "Feb",
        "sales": 400000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Profit-profit",
        "__Dim_Color__": "2020-Profit",
        "__Dim_Detail__": "2020-Profit",
        "__Dim_X__": "Feb",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart2": 320000,
        "__OriginalData__": {
          "month": "Feb",
          "profit": 320000,
          "sales": 400000,
          "year": "2020",
        },
        "month": "Feb",
        "profit": 320000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales-sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "Mar",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart2": 600000,
        "__OriginalData__": {
          "month": "Mar",
          "profit": 430000,
          "sales": 600000,
          "year": "2020",
        },
        "month": "Mar",
        "sales": 600000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Profit-profit",
        "__Dim_Color__": "2020-Profit",
        "__Dim_Detail__": "2020-Profit",
        "__Dim_X__": "Mar",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart2": 430000,
        "__OriginalData__": {
          "month": "Mar",
          "profit": 430000,
          "sales": 600000,
          "year": "2020",
        },
        "month": "Mar",
        "profit": 430000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales-sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "Apr",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart2": 800000,
        "__OriginalData__": {
          "month": "Apr",
          "profit": 540000,
          "sales": 800000,
          "year": "2020",
        },
        "month": "Apr",
        "sales": 800000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Profit-profit",
        "__Dim_Color__": "2020-Profit",
        "__Dim_Detail__": "2020-Profit",
        "__Dim_X__": "Apr",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart2": 540000,
        "__OriginalData__": {
          "month": "Apr",
          "profit": 540000,
          "sales": 800000,
          "year": "2020",
        },
        "month": "Apr",
        "profit": 540000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales-sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "May",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart2": 1000000,
        "__OriginalData__": {
          "month": "May",
          "profit": 250000,
          "sales": 1000000,
          "year": "2020",
        },
        "month": "May",
        "sales": 1000000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Profit-profit",
        "__Dim_Color__": "2020-Profit",
        "__Dim_Detail__": "2020-Profit",
        "__Dim_X__": "May",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart2": 250000,
        "__OriginalData__": {
          "month": "May",
          "profit": 250000,
          "sales": 1000000,
          "year": "2020",
        },
        "month": "May",
        "profit": 250000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Sales-sales",
        "__Dim_Color__": "2020-Sales",
        "__Dim_Detail__": "2020-Sales",
        "__Dim_X__": "Jun",
        "__MeaId__": "sales",
        "__MeaName__": "Sales",
        "__MeaValue__chart2": 1200000,
        "__OriginalData__": {
          "month": "Jun",
          "profit": 610000,
          "sales": 1200000,
          "year": "2020",
        },
        "month": "Jun",
        "sales": 1200000,
        "year": "2020",
      },
      {
        "__Dim_ColorId__": "2020-Profit-profit",
        "__Dim_Color__": "2020-Profit",
        "__Dim_Detail__": "2020-Profit",
        "__Dim_X__": "Jun",
        "__MeaId__": "profit",
        "__MeaName__": "Profit",
        "__MeaValue__chart2": 610000,
        "__OriginalData__": {
          "month": "Jun",
          "profit": 610000,
          "sales": 1200000,
          "year": "2020",
        },
        "month": "Jun",
        "profit": 610000,
        "year": "2020",
      },
    ],
  },
  "rows": [],
  "theme": {
    "bodyStyle": {
      "bgColor": "rgba(0,0,0,0)",
      "borderColor": "rgba(0,4,20,0.2)",
      "borderLineWidth": [
        0,
        0,
        2,
        0,
      ],
      "hover": {
        "cellBgColor": "transparent",
      },
      "padding": [
        0,
        0,
        1,
        0,
      ],
    },
    "bottomFrozenStyle": {
      "bgColor": "rgba(0,0,0,0)",
      "borderColor": "rgba(0,4,20,0.2)",
      "borderLineWidth": 0,
      "hover": {
        "cellBgColor": "rgba(178,186,207, 0.2)",
      },
    },
    "cornerHeaderStyle": {
      "bgColor": "rgba(0,0,0,0)",
      "borderColor": "rgba(0,4,20,0.2)",
      "borderLineWidth": [
        0,
        0,
        0,
        0,
      ],
      "color": "#333333",
      "fontSize": 12,
      "fontWeight": "bold",
      "hover": {
        "cellBgColor": "rgba(178,186,207, 0.2)",
      },
      "textAlign": "center",
    },
    "cornerLeftBottomCellStyle": {
      "bgColor": "rgba(0,0,0,0)",
      "borderColor": "rgba(0,4,20,0.2)",
      "borderLineWidth": 0,
      "hover": {
        "cellBgColor": "rgba(178,186,207, 0.2)",
      },
    },
    "cornerRightBottomCellStyle": {
      "bgColor": "rgba(0,0,0,0)",
      "borderColor": "rgba(0,4,20,0.2)",
      "borderLineWidth": 0,
      "hover": {
        "cellBgColor": "rgba(178,186,207, 0.2)",
      },
    },
    "cornerRightTopCellStyle": {
      "bgColor": "rgba(0,0,0,0)",
      "borderColor": "rgba(0,4,20,0.2)",
      "borderLineWidth": 0,
      "hover": {
        "cellBgColor": "rgba(178,186,207, 0.2)",
      },
    },
    "frameStyle": {
      "bgColor": "rgba(0,0,0,0)",
      "borderLineWidth": 0,
    },
    "headerStyle": {
      "bgColor": "rgba(0,0,0,0)",
      "borderColor": "rgba(0,4,20,0.2)",
      "borderLineWidth": 0,
      "color": "#333333",
      "fontSize": 12,
      "hover": {
        "cellBgColor": "rgba(178,186,207, 0.2)",
      },
      "textAlign": "center",
    },
    "rightFrozenStyle": {
      "bgColor": "rgba(0,0,0,0)",
      "borderColor": "rgba(0,4,20,0.2)",
      "borderLineWidth": 0,
      "hover": {
        "cellBgColor": "rgba(178,186,207, 0.2)",
      },
    },
    "rowHeaderStyle": {
      "bgColor": "rgba(0,0,0,0)",
      "borderColor": "rgba(0,4,20,0.2)",
      "borderLineWidth": 0,
      "color": "#333333",
      "fontSize": 12,
      "hover": {
        "cellBgColor": "rgba(178,186,207, 0.2)",
      },
    },
    "selectionStyle": {
      "cellBgColor": "",
      "cellBorderColor": "",
    },
    "underlayBackgroundColor": "rgba(0,0,0,0)",
  },
  "widthMode": "adaptive",
}
`;
